[package]
name = "client"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path="../common" }
futures = "0.1"
js-sys = "=0.3.19"
lazy_static = "1.3"
log = "0.4"
seed = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = "=0.2.42"
web-sys = { version="=0.3.19", features=["Storage", "Window"]}
validator = "0.8"
