[package]
name = "client"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path="../common" }
futures = "0.3"
js-sys = "=0.3.32"
lazy_static = "1.3"
log = "0.4"
seed = "0.6"
serde = { version="1", features=["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.55"
web-sys = { version="=0.3.32", features=["Storage", "Window"]}
validator = "0.10"
