[package]
name = "server"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
bytes = "0.4"
env_logger = "0.5"
futures = "0.1"
log = "0.4"
prost = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
prost-build = "0.5"
