[package]
name = "server"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-net = "0.2"
actix-web = "0.7"
base64 = "0.10"
bcrypt = "0.3"
chrono = "0.4"
common = { path="../common" }
env_logger = "0.5"
envy = "0.4"
futures = "0.1"
log = "0.4"
mongodb = "0.3"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_jwt = "1.2"
time = "0.1"
validator = "0.8"
wither = "0.8"
wither_derive = "0.8"
