[package]
name = "server"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.2.1"
actix-rt = "1"
actix-web = { version = "2", features=["rustls"] }
base64 = "0.12"
bcrypt = "0.7"
bytes = "0.5.4"
chrono = "0.4"
common = { path="../common", features=["server"] }
envy = "0.4"
futures = "0.3"
jsonwebtoken = "7"
reqwest = { version="0.10", default-features=false, features=["json", "rustls-tls"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1"
sqlx = { version="0.3.3", default-features=false, features=["postgres", "macros", "runtime-tokio"] }
tracing = "0.1"
tracing-subscriber = "0.2"
validator = "0.10"
